--- a/files/nginx/nginx.conf
+++ b/files/nginx/nginx.conf
@@ -16,9 +16,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Scheme $scheme;
         proxy_set_header REMOTE_ADDR $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Scheme https;
+        proxy_set_header X-Forwarded-Proto https;
         proxy_redirect off;
 
         # Try to serve static files from nginx, no point in making an
