added terraform args

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -63,14 +63,14 @@
 
 #run terraform plan
 - name: Run the terraform plan
-  command: "terraform plan -no-color "
+  command: "terraform plan -no-color {{ terraform_arg }}"
   args:
     chdir: "{{ terraform_data_dir }}/{{ project_name }}/{{ project_deployment_environment }}"
   tags: configuration
 
 #run terraform apply -auto-approve
 - name: Run the installation on AWS
-  command: "terraform apply -auto-approve -no-color "
+  command: "terraform apply -auto-approve -no-color {{ terraform_arg }}"
   args:
     chdir: "{{ terraform_data_dir }}/{{ project_name }}/{{ project_deployment_environment }}"
   tags: apply
