--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,6 +21,7 @@ ecc_parameter_group_name: "default.redis3.2"
 db_skip_final_snapshot: "true"
 
 terraform_dir: "/opt/terraform"
+terraform_arg: ""
 terraform_data_dir: "/opt/terraform/data"
 
 
