--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,12 @@
 ---
 aws_vpc_default: "true"
 project_zone_rds_cluster: 'false'
+project_ecs: "true"
+project_alb: "true"
+project_rds: 'true'
+project_iam: "true"
+project_cloudfront_for_alb: "true"
+project_cloudfront_for_lambda: "false"
 
 ecs_min_size: 0
 ecs_max_size: 1
