--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,26 @@
 ---
 aws_vpc_default: "true"
-project_zone_rds_cluster: 'false'
-project_ecs: "true"
-project_alb: "true"
-project_rds: 'true'
-project_iam: "true"
-project_cloudfront_for_alb: "true"
-project_cloudfront_for_lambda: "false"
+aws_vpc_id: ""
+aws_subnet_id_a : ""
+aws_subnet_id_b : ""
+aws_subnet_id_c : ""
+
 project_s3: "false"
+project_ecs: "false"
+project_alb: "false"
+project_iam: "false"
+project_rds: "false"
+project_rds_cluster: "false"
+
+project_zone_cloudflare: "false"
+project_cloudfront_for_alb: "false"
+project_cloudfront_for_lambda: "false"
+
+main_dns_record_create: "true"
+
+s3_bucket_name: "tf-s3-test"
+s3_bucket_policy: ""
+iam_user_policy: ""
 
 ecs_min_size: 0
 ecs_max_size: 1
