--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,7 @@ project_alb: "false"
 project_iam: "false"
 project_rds: "false"
 project_rds_cluster: "false"
+project_elasticache: "false"
 
 project_zone_cloudflare: "false"
 project_cloudfront_for_alb: "false"
@@ -33,11 +34,11 @@ db_engine: "mysql"
 db_engine_version: "5.6.37"
 db_allocated_storage_size: 10
 
-ecc_engine: "redis"
-ecc_node_type: "cache.t2.small"
-ecc_port: 6379
-ecc_num_cache_nodes: 1
-ecc_parameter_group_name: "default.redis3.2"
+elasticache_engine: "redis"
+elasticache_node_type: "cache.t2.small"
+elasticacheport: 6379
+elasticache_num_cache_nodes: 1
+elasticache_parameter_group_name: "default.redis3.2"
 
 db_skip_final_snapshot: "true"
 
