--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
+organization_name: "default" # should be redefined from AWX
+
 aws_vpc_default: "true"
 aws_vpc_id: ""
 aws_subnet_id_a : ""
@@ -28,6 +30,7 @@ ecs_max_size: 1
 ecs_desired_capacity: 1
 ecs_instance_type: "t2.micro"
 ecs_block_device_size: 22
+ecs_nginx_conf_b64: ""
 
 db_instance_type: "db.t2.micro"
 db_engine: "mysql"
