--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,6 +21,7 @@ project_cloudfront_for_alb: "false"
 project_cloudfront_for_lambda: "false"
 
 main_dns_record_create: "true"
+skip_env_domain_prefix: false
 
 s3_bucket_name: "tf-s3-test"
 s3_bucket_policy_name: "test_iam_user_policy.json.j2"
