--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@ project_iam: "false"
 project_rds: "false"
 project_rds_cluster: "false"
 project_elasticache: "false"
-project_domain_zone: "example.com"
+project_env_zone: "example.com"
 project_zone_cloudflare: "false"
 project_cloudfront_for_alb: "false"
 project_cloudfront_for_s3: "false"
