--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,9 +23,12 @@ project_zone_cloudflare: false
 project_cloudfront_for_alb: false
 project_cloudfront_for_s3: false
 project_zone_route53: false
+project_lambda: false
 
 main_dns_record_create: true
 skip_env_domain_prefix: false
+
+cloudfront_default_root_object: "index.html"
 
 s3_bucket_name: "tf-s3-test"
 s3_bucket_policy_name: "test_iam_user_policy.json.j2"
