--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,7 +28,7 @@ project_lambda: false
 main_dns_record_create: true
 skip_env_domain_prefix: false
 
-cloudfront_default_root_object: "index.html"
+cloudfront_default_root_object: ""
 
 s3_bucket_name: "tf-s3-test"
 s3_bucket_policy_name: "test_iam_user_policy.json.j2"
