--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,6 +24,7 @@ project_cloudfront_for_alb: false
 project_cloudfront_for_s3: false
 project_zone_route53: false
 project_lambda: false
+project_ecr: false
 
 main_dns_record_create: true
 skip_env_domain_prefix: false
