added env project_cloudfront_for_s3_certificate

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,7 @@ project_zone_cloudflare: false
 project_zone_rds_cluster: false
 project_cloudfront_for_alb: false
 project_cloudfront_for_s3: false
+project_cloudfront_for_s3_certificate: true
 project_zone_route53: false
 project_lambda: false
 
