make for generated role imports network by default

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -81,7 +81,7 @@
       chdir: "{{ tf_dir }}"
 
   - name: Import networking
-    shell: make tf-import-networking
+    shell: make
     tags: state
     args:
       chdir: "{{ tf_dir }}"
