--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,8 +25,8 @@
     state: directory
   tags: configuration
 
-- shell: env
-  tags: configuration
+# - shell: env
+#   tags: configuration
 
 # - name: Clean modules path
 #   file:
