--- a/vars/availability-zones.yml
+++ b/vars/availability-zones.yml
@@ -11,5 +11,5 @@ ap-southeast-2: [a, b, c]
 eu-central-1: [a, b, c]
 us-east-1: [a, b, c, d, e, f]
 us-east-2: [a, b, c]
-us-west-1: [a, c]
+us-west-1: [a, b]
 us-west-2: [a, b, c]
